# joml-cpp

./: .clang-format  CMakeLists.txt  LICENSE  README.md  meson.build
include/: joml.hpp
src/: joml.cpp  joml.hpp  joml2json.cpp  main.cpp
